--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,13 +1,43 @@
 p {
-    font: 100% "Times New Roman", Times, sans-serif;
-}  
-body {
-    font-size: large;
+    font-family: "Times New Roman", Times, sans-serif;
+    color: green;
 }
-p{
-    color: blue;
-  }
-.img-with-text {
+h1  { 
+    display: block;
+    font-size: 5.5em;
     text-align: center;
-    width: 200;
+    font-weight: bold;
+    font-style: italic;
+    color: rgb(255, 0, 221)
+    }
+h2 {
+    font-style: italic;
+}
+#toggleMenu {
+        display: none;
+    }    
+body {
+    font-size: x-large;
+}
+.img-with-text {
+    text-align: left;
+    width: 450;
+}
+textarea { 
+    width: 50%;
+    height: 200px;
+    border-color: teal;
+    border-radius: 5px;
+    padding: .5em; 
+}
+
+input { 
+    width: 50%;
+    border-color: teal;
+    border-radius: 5px;
+    padding: .5em; 
+}
+button {
+    border-color: black;
+    border-radius: 10px;
 }
